--- a/vs-login.yaml
+++ b/vs-login.yaml
@@ -13,3 +13,4 @@ spec:
             host: login-service.default.svc.cluster.local
             port:
               number: 3000
+            subset: v2
