--- a/dr-login.yaml
+++ b/dr-login.yaml
@@ -3,7 +3,7 @@ kind: DestinationRule
 metadata:
   name: login
 spec:
-  host:  host: login-service.default.svc.cluster.local
+  host: login-service.default.svc.cluster.local
   subsets:
     - name: v1
     labels:
