--- a/.github/workflows/app.yaml
+++ b/.github/workflows/app.yaml
@@ -82,7 +82,7 @@ jobs:
         kubectl apply -f gateway.yaml
         kubectl get svc -l=istio=ingressgateway -n istio-system
         kubectl apply -f gateway.yaml
-        kubectl apply -f dr-login.yaml
+        #kubectl apply -f dr-login.yaml
         kubectl apply -f vs-login.yaml
         kubectl apply -f vs-list.yaml
         
@@ -262,7 +262,7 @@ jobs:
         kubectl apply -f gateway.yaml
         kubectl get svc -l=istio=ingressgateway -n istio-system
         kubectl apply -f gateway.yaml
-        kubectl apply -f dr-login.yaml
+        #kubectl apply -f dr-login.yaml
         kubectl apply -f vs-login.yaml
         kubectl apply -f vs-list.yaml     
         
@@ -417,7 +417,7 @@ jobs:
         kubectl get svc -l=istio=ingressgateway -n istio-system
         kubectl apply -f gateway.yaml
         kubectl apply -f dr-login.yaml
-        kubectl apply -f vs-login.yaml
+        kubectl apply -f vs-login0.yaml
         kubectl apply -f vs-list.yaml 
         
   Job8:
